# calypso

./: .dockerignore  .gitignore  .gitmodules  AGENT.md  AGENTS.md  Cargo.toml  FAQ.md  README.md  agent-communication.md  calypso-ontology.ttl  default_12416827221201664421_0_812814.profraw  default_12416827221201664421_0_873701.profraw  default_4748165957295084938_0_866536.profraw  default_8578687083748519115_0_866544.profraw  default_8578687083748519115_0_866547.profraw  default_8578687083748519115_0_866550.profraw  default_8578687083748519115_0_866551.profraw  package.json  test-init.sh
cli/: Cargo.toml  README.md  build.rs  calypso-cli-implementation-plan.md  lcov.info  spec.md
cli/.cargo/: config.toml
cli/examples/looping-state-machines/: README.md
cli/scripts/: test-init.sh
cli/src/: app.rs  blueprint_workflows.rs  codex.rs  doctor.rs  error.rs  execution.rs  feature_start.rs  github.rs  headless.rs  init.rs  lib.rs  main.rs  policy.rs  pr_checklist.rs  report.rs  runtime.rs  signal.rs  sm_audit.rs  state.rs  telemetry.rs  template.rs  tui.rs
cli/templates/default/: agents.yml  prompts.yml  state-machine.yml
cli/tests/: agent_reporting.rs  app.rs  cli.rs  doctor.rs  driver.rs  e2e_mock_claude.rs  e2e_tui.rs  error.rs  feature_start.rs  github.rs  init.rs  looping_examples.rs  phony_template.rs  pr_checklist.rs  report.rs  runtime.rs  select_flow.rs  state.rs  state_release.rs  state_v2.rs  telemetry.rs  templates.rs  tui.rs
cli/tests/helpers/: fake_claude.rs  spawned_calypso.rs
crates/calypso-cli/: Cargo.toml  README.md  build.rs  calypso-cli-implementation-plan.md
crates/calypso-cli/.cargo/: config.toml
crates/calypso-cli/scripts/: test-init.sh
crates/calypso-cli/src/: daemon.rs  lib.rs  main.rs  run_control.rs  step.rs
crates/calypso-cli/tests/: agent_reporting.rs  app.rs  claude.rs  cli.rs  doctor.rs  driver.rs  e2e.rs  e2e_mock_claude.rs  error.rs  feature_start.rs  github.rs  init.rs  no_args_auto_detect.rs  phony_template.rs  pr_checklist.rs  report.rs  runtime.rs  select_flow.rs  state.rs  state_release.rs  state_v2.rs  telemetry.rs  templates.rs  workflows.rs
crates/calypso-workflow-exec/: Cargo.toml
crates/calypso-workflow-exec/src/: lib.rs
crates/nightshift-core/: Cargo.toml  build.rs
crates/nightshift-core/src/: app.rs  blueprint_workflows.rs  db.rs  doctor.rs  driver.rs  error.rs  execution.rs  feature_start.rs  github.rs  headless.rs  headless_persist.rs  headless_sm.rs  headless_sm_driver.rs  init.rs  interpreter.rs  interpreter_scheduler.rs  keys.rs  lib.rs  main.rs  orchestrator.rs  pinned_prompt.rs  policy.rs  pr_checklist.rs  runtime.rs  sm_audit.rs  state.rs  step_loop.rs  telemetry.rs  template.rs  template_assets.rs  testing.rs  (+2 more)
(+209 files in other folders)
