[package]
name = "calypso-cli"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "calypso-cli"

[dependencies]
nightshift-core = { path = "../nightshift-core" }
calypso-templates = { path = "../calypso-templates" }
calypso-web = { path = "../calypso-web" }
calypso-workflows = { path = "../calypso-workflows" }
calypso-workflow-exec = { path = "../calypso-workflow-exec" }
# Direct dependencies still needed by integration tests or re-exported types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[[bin]]
name = "calypso-cli"
path = "src/main.rs"

# coverage-driver is disabled for releases (test-only utility)
[[bin]]
name = "coverage-driver"
path = "src/bin/coverage_driver.rs"
required-features = ["__dev_only"]

[dev-dependencies]
expectrl = "0.7"

[features]
__dev_only = []
