[package]
name = "calypso-workflow-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
calypso-workflows = { path = "../calypso-workflows" }
chrono = "0.4"
cron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "calypso_workflow_exec"
path = "src/lib.rs"
