[package]
name = "nightshift-core"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
calypso-templates = { path = "../calypso-templates" }
calypso-workflow-exec = { path = "../calypso-workflow-exec" }
calypso-workflows = { path = "../calypso-workflows" }
crossterm = "0.26.1"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
cron = "0.12"

[dev-dependencies]
proptest = "1"

[features]
# Expose test helpers (MockBackend, make_prompt) to dependent crates.
testing = []

[lib]
name = "nightshift_core"
path = "src/lib.rs"

[[bin]]
name = "nightshift"
path = "src/main.rs"
